--- a/styles.css
+++ b/styles.css
@@ -7,11 +7,11 @@ td {
     border-bottom: 1px solid gray;
 }
 
-tr:nth-child(even) {
+tbody tr:nth-child(even) {
     background-color: #f2f2f2;
 }
 
-tr:nth-child(odd) {
+tbody tr:nth-child(odd) {
     background-color: #ffffff;
 }
 
